# paper-graph

./: .gitignore  README.md  pyproject.toml
src/paper_graph/: __init__.py  http.py  openalex.py  works.py
test/: test_basic_http_token_usage.py  test_environ.py  test_http_requests.py  test_import.py  test_openalex.py  test_openalex_http_requests.py  test_request_urls.py  test_url_requests.py  test_work.py  test_works.py
