[project]
name = "paper-graph"
authors = [
    {name = "Zachary Coleman", email = "coleman.zacharyc@gmail.com"},
]
description = "Graph exploration for scientific papers."
version = "0.0.1-dev"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "polars",
    "igraph",
    "leidenalg",
    "altair",
    "python-dotenv",
    "requests"
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest"
]

all = [
    "paper-graph[dev]"
]


[project.urls]
Homepage = "https://github.com/zccoleman/paper-graph"

[build-system]
requires = ["setuptools", "setuptools-scm",]
build-backend = "setuptools.build_meta"
